<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="com.example.t_gamer.compmovel.AddCursoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ProgressBar
        android:id="@+id/pbAddMateria"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/addMateriaContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvAddMateriaHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/addClass"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvAddMateriaSubheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/addClassSubheader" />

            <TextView
                android:id="@+id/tvAddMateriaErrorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="18dp"
                android:paddingTop="5dp"
                android:textColor="@android:color/holo_red_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="18dp">

                <EditText
                    android:id="@+id/etAddMateriaTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/mtAddMateriaDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxHeight="120dp" />

                <Button
                    android:id="@+id/btnAddNewMateria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/Register"
                    android:textColor="@color/colorPrimaryLight" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
